- Work on the Empire Modeler

--- a/Projects/Lazarus/LccEmpireModeler/ObjectOptionsForms/signalheadoptions.lfm
+++ b/Projects/Lazarus/LccEmpireModeler/ObjectOptionsForms/signalheadoptions.lfm
@@ -1,44 +1,45 @@
 object FormSignalHeadOptions: TFormSignalHeadOptions
-  Left = 533
-  Height = 214
-  Top = 152
+  Left = 606
+  Height = 201
+  Top = 218
   Width = 429
   Caption = 'FormSignalHeadOptions'
-  ClientHeight = 214
+  ClientHeight = 201
   ClientWidth = 429
   OnShow = FormShow
   LCLVersion = '1.4.0.4'
   object Panel1: TPanel
-    Left = 0
-    Height = 214
+    Left = 232
+    Height = 201
     Top = 0
-    Width = 170
-    Align = alLeft
+    Width = 197
+    Align = alRight
     Caption = 'Panel1'
-    ClientHeight = 214
-    ClientWidth = 170
-    TabOrder = 0
+    ClientHeight = 201
+    ClientWidth = 197
+    TabOrder = 1
     object ListViewAspects: TListView
       Left = 1
-      Height = 186
-      Top = 27
-      Width = 168
+      Height = 157
+      Top = 43
+      Width = 195
       Align = alClient
       Columns = <      
         item
           Caption = 'Aspect'
           Width = 162
         end>
-      MultiSelect = True
       RowSelect = True
+      ScrollBars = ssAutoBoth
       TabOrder = 0
       ViewStyle = vsReport
+      OnSelectItem = ListViewAspectsSelectItem
     end
     object ToolBar1: TToolBar
       Left = 1
       Height = 26
-      Top = 1
-      Width = 168
+      Top = 17
+      Width = 195
       Caption = 'ToolBar1'
       Images = ImageListSignalHeadOptions
       TabOrder = 1
@@ -52,12 +53,113 @@ object FormSignalHeadOptions: TFormSignalHeadOptions
         Top = 2
         Action = ActionRemoveAspect
       end
+      object ToolButton3: TToolButton
+        Left = 47
+        Height = 22
+        Top = 2
+        Width = 10
+        Caption = 'ToolButton3'
+        Style = tbsSeparator
+      end
+      object ToolButton4: TToolButton
+        Left = 57
+        Top = 2
+        Action = ActionMoveUp
+      end
+      object ToolButton5: TToolButton
+        Left = 80
+        Top = 2
+        Action = ActionMoveDown
+      end
     end
+    object Label1: TLabel
+      Left = 1
+      Height = 16
+      Top = 1
+      Width = 195
+      Align = alTop
+      Alignment = taCenter
+      Caption = 'Output Actions'
+      ParentColor = False
+    end
+  end
+  object Panel2: TPanel
+    Left = 0
+    Height = 201
+    Top = 0
+    Width = 224
+    Align = alClient
+    ClientHeight = 201
+    ClientWidth = 224
+    TabOrder = 0
+    object Label2: TLabel
+      Left = 1
+      Height = 16
+      Top = 1
+      Width = 222
+      Align = alTop
+      Alignment = taCenter
+      Caption = 'Input Actions'
+      ParentColor = False
+    end
+    object Label3: TLabel
+      Left = 13
+      Height = 16
+      Top = 27
+      Width = 124
+      Caption = 'Block Sensor Inputs'
+      ParentColor = False
+    end
+    object Label4: TLabel
+      Left = 13
+      Height = 16
+      Top = 80
+      Width = 141
+      Caption = 'Turnout Sensor Inputs'
+      ParentColor = False
+    end
+    object SpinEditBlocks: TSpinEdit
+      Left = 32
+      Height = 16
+      Top = 52
+      Width = 144
+      TabOrder = 0
+    end
+    object SpinEditTurnouts: TSpinEdit
+      Left = 32
+      Height = 16
+      Top = 104
+      Width = 144
+      TabOrder = 1
+    end
+    object SpinEditCTC: TSpinEdit
+      Left = 32
+      Height = 16
+      Top = 160
+      Width = 144
+      TabOrder = 2
+    end
+    object LabelExternalsSwitches: TLabel
+      Left = 13
+      Height = 16
+      Top = 136
+      Width = 134
+      Caption = 'Manual Switch Inputs'
+      ParentColor = False
+    end
+  end
+  object Splitter1: TSplitter
+    Left = 224
+    Height = 201
+    Top = 0
+    Width = 8
+    Align = alRight
+    ResizeAnchor = akRight
   end
   object ActionListSignalHeadOptions: TActionList
     Images = ImageListSignalHeadOptions
-    left = 203
-    top = 91
+    left = 256
+    top = 80
     object ActionAddAspect: TAction
       Caption = 'Add Aspect'
       ImageIndex = 11
@@ -68,12 +170,22 @@ object FormSignalHeadOptions: TFormSignalHeadOptions
       ImageIndex = 9
       OnExecute = ActionRemoveAspectExecute
     end
+    object ActionMoveDown: TAction
+      Caption = 'Move Down'
+      ImageIndex = 23
+      OnExecute = ActionMoveDownExecute
+    end
+    object ActionMoveUp: TAction
+      Caption = 'Move Up'
+      ImageIndex = 24
+      OnExecute = ActionMoveUpExecute
+    end
   end
   object ImageListSignalHeadOptions: TImageList
-    left = 312
-    top = 56
+    left = 264
+    top = 136
     Bitmap = {
-      4C69170000001000000010000000000000000000000000000000000000000000
+      4C69190000001000000010000000000000000000000000000000000000000000
       0000000000000000000000000000000000000000000000000000000000000000
       0000000000000000000000000000000000000000000030303030313131EF3131
       31CF303030100000000000000000000000000000000000000000303030303131
@@ -809,7 +921,71 @@ object FormSignalHeadOptions: TFormSignalHeadOptions
       05FF050505FF050505FF050505FF050505FF050505FF050505FF050505FF0505
       05FF050505FF050505FF050505FF020202000202020002020200020202000202
       0200020202000202020002020200020202000202020002020200020202000202
-      0200020202000202020002020200
+      0200020202000202020002020200000000000000000000000000000000000000
+      000000000000323232FF323232FF323232FF323232FF323232FF323232200000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000002F2F2FFF2F2F2FFF2F2F2FFF2F2F2FFF2F2F2FFF000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000002C2C2CFF2C2C2CFF2C2C2CFF2C2C2CFF2C2C2CFF000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000282828FF282828FF282828FF282828FF282828FF000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000252525FF252525FF252525FF252525FF252525FF000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000222222FF222222FF222222FF222222FF222222FF000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000001F1F1FFF1F1F1FFF1F1F1FFF1F1F1FFF1F1F1FFF000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000001B1B1BFF1B1B1BFF1B1B1BFF1B1B1BFF1B1B1BFF000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000017171710181818FF181818FF181818FF181818FF181818FF171717100000
+      00000000000000000000000000000000000000000000151515FF151515FF1515
+      15FF151515FF151515FF151515FF151515FF151515FF151515FF151515FF1515
+      15FF151515FF151515FF00000000000000000000000012121260121212FF1212
+      12FF121212FF121212FF121212FF121212FF121212FF121212FF121212FF1212
+      12FF121212FF12121260000000000000000000000000000000000F0F0F600F0F
+      0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F
+      0FFF0F0F0F600000000000000000000000000000000000000000000000000C0C
+      0C600B0B0BFF0B0B0BFF0B0B0BFF0B0B0BFF0B0B0BFF0B0B0BFF0B0B0BFF0C0C
+      0C60000000000000000000000000000000000000000000000000000000000000
+      000009090960080808FF080808FF080808FF080808FF080808FF090909600000
+      0000000000000000000000000000000000000000000000000000000000000000
+      00000000000005050560050505FF050505FF050505FF05050560000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000002020260020202BF0303035000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000032323260323232BF3232326000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000002F2F2F602F2F2FFF2F2F2FFF2F2F2FFF2F2F2F60000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      00002B2B2B602C2C2CFF2C2C2CFF2C2C2CFF2C2C2CFF2C2C2CFF2B2B2B600000
+      0000000000000000000000000000000000000000000000000000000000002828
+      2860292929FF292929FF292929FF292929FF292929FF292929FF292929FF2828
+      2860000000000000000000000000000000000000000000000000252525602626
+      26FF262626FF262626FF262626FF262626FF262626FF262626FF262626FF2626
+      26FF252525600000000000000000000000000000000022222260222222FF2222
+      22FF222222FF222222FF222222FF222222FF222222FF222222FF222222FF2222
+      22FF222222FF222222600000000000000000000000001F1F1FFF1F1F1FFF1F1F
+      1FFF1F1F1FFF1F1F1FFF1F1F1FFF1F1F1FFF1F1F1FFF1F1F1FFF1F1F1FFF1F1F
+      1FFF1F1F1FFF1F1F1FFF00000000000000000000000000000000000000000000
+      00001D1D1D101C1C1CFF1C1C1CFF1C1C1CFF1C1C1CFF1C1C1CFF1D1D1D100000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000191919FF191919FF191919FF191919FF191919FF000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000161616FF161616FF161616FF161616FF161616FF000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000121212FF121212FF121212FF121212FF121212FF000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000C0C0CFF0C0C0CFF0C0C0CFF0C0C0CFF0C0C0CFF000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000090909FF090909FF090909FF090909FF090909FF000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000050505FF050505FF050505FF050505FF050505FF000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000020202FF020202FF020202FF020202FF020202FF000000000000
+      0000000000000000000000000000
     }
   end
 end
