--- a/Projects/Lazarus/LccEmpireModeler/unitsegmentwizardform.lfm
+++ b/Projects/Lazarus/LccEmpireModeler/unitsegmentwizardform.lfm
@@ -94,6 +94,7 @@ object FormSegmentWizard: TFormSegmentWizard
       Width = 120
       Anchors = [akTop, akRight]
       Caption = 'Ok'
+      Default = True
       ModalResult = 1
       TabOrder = 0
     end
