--- a/Projects/Lazarus/LccEmpireModeler/unitobjectwizardform.lfm
+++ b/Projects/Lazarus/LccEmpireModeler/unitobjectwizardform.lfm
@@ -1,38 +1,38 @@
 object FormObjectWizard: TFormObjectWizard
-  Left = 533
-  Height = 398
-  Top = 208
-  Width = 564
+  Left = 514
+  Height = 313
+  Top = 289
+  Width = 554
   BorderStyle = bsDialog
   Caption = 'Object Wizard'
-  ClientHeight = 398
-  ClientWidth = 564
+  ClientHeight = 313
+  ClientWidth = 554
   OnShow = FormShow
   Position = poOwnerFormCenter
   LCLVersion = '1.4.0.4'
   object Panel1: TPanel
     Left = 0
-    Height = 348
+    Height = 263
     Top = 0
-    Width = 564
+    Width = 554
     Align = alClient
-    ClientHeight = 348
-    ClientWidth = 564
+    ClientHeight = 263
+    ClientWidth = 554
     TabOrder = 0
-    object Panel3: TPanel
+    object PanelUpperBkgnd: TPanel
       Left = 1
       Height = 191
       Top = 1
-      Width = 562
+      Width = 552
       Align = alTop
       ClientHeight = 191
-      ClientWidth = 562
+      ClientWidth = 552
       TabOrder = 0
       object EditName: TEdit
         Left = 40
         Height = 22
         Top = 40
-        Width = 486
+        Width = 476
         Anchors = [akTop, akLeft, akRight]
         TabOrder = 0
         Text = 'EditName'
@@ -49,7 +49,7 @@ object FormObjectWizard: TFormObjectWizard
         Left = 40
         Height = 22
         Top = 95
-        Width = 486
+        Width = 476
         Anchors = [akTop, akLeft, akRight]
         TabOrder = 1
         Text = 'EditDescription'
@@ -66,7 +66,7 @@ object FormObjectWizard: TFormObjectWizard
         Left = 40
         Height = 21
         Top = 152
-        Width = 486
+        Width = 476
         Anchors = [akTop, akLeft, akRight]
         ItemHeight = 0
         ItemIndex = 0
@@ -96,34 +96,35 @@ object FormObjectWizard: TFormObjectWizard
     end
     object PanelObjectOptions: TPanel
       Left = 1
-      Height = 155
+      Height = 70
       Top = 192
-      Width = 562
+      Width = 552
       Align = alClient
       TabOrder = 1
     end
   end
-  object Panel2: TPanel
+  object PanelLowerBkgnd: TPanel
     Left = 0
     Height = 50
-    Top = 348
-    Width = 564
+    Top = 263
+    Width = 554
     Align = alBottom
     ClientHeight = 50
-    ClientWidth = 564
+    ClientWidth = 554
     TabOrder = 1
     object Button1: TButton
-      Left = 273
+      Left = 263
       Height = 22
       Top = 16
       Width = 120
       Anchors = [akTop, akRight]
       Caption = 'Ok'
+      Default = True
       ModalResult = 1
       TabOrder = 0
     end
     object Button2: TButton
-      Left = 406
+      Left = 396
       Height = 22
       Top = 16
       Width = 120
