--- a/Projects/Lazarus/RR-Circuits_UsbCan_Tester/form_template.lfm
+++ b/Projects/Lazarus/RR-Circuits_UsbCan_Tester/form_template.lfm
@@ -10,7 +10,7 @@ object FormTemplate: TFormTemplate
   OnCloseQuery = FormCloseQuery
   OnResize = FormResize
   OnShow = FormShow
-  LCLVersion = '1.4.0.4'
+  LCLVersion = '1.6.0.4'
   object ToolBarMain: TToolBar
     Left = 0
     Height = 46
@@ -32446,6 +32446,7 @@ object FormTemplate: TFormTemplate
     Ethernet.LocalClientPort = 12022
     Ethernet.RemoteListenerPort = 12021
     Ethernet.LocalListenerPort = 12021
+    Ethernet.Tcp = False
     General.AliasID = '0x000'
     General.NodeID = '0x000000000000'
     Logging.Detailed = False
